# nptu-campus-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
services/api/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
services/api/src/nptu_assistant/: __init__.py  cli.py  main.py  wiring.py
services/api/src/nptu_assistant/api/: __init__.py  errors.py  schemas.py  services.py
services/api/src/nptu_assistant/core/: __init__.py  logging.py  rate_limit.py  security.py  settings.py
services/api/src/nptu_assistant/crawlers/: __init__.py  aliases.py  config.py  crawl_policy.py  http.py  models.py  official_units.py  parsing.py  refresh.py  resolution.py  search.py  service.py  site_discovery.py  site_map.py  site_models.py  (+4 more)
services/api/tests/: test_academic_units_knowledge.py  test_administrative_units_knowledge.py  test_api.py  test_chat_orchestration.py  test_cli.py  test_code_review_graph_setup.py  test_configurable_announcement_adapter.py  test_conversation.py  test_core.py  test_crawler.py  test_ingestion.py  test_keyword_search.py  test_live_keyword_search.py  test_live_official_units.py  test_live_unit_announcement_source.py  test_models.py  test_official_units.py  test_project_config.py  test_providers.py  test_rag.py  test_refresh.py  test_retrieval.py  test_semantic_site_search.py  test_services.py  test_site_map.py  test_site_search.py  test_site_search_cache.py  test_tools.py  test_unit_source_config.py  test_unit_source_resolution.py
(+96 files in other folders)
